[tool.poetry]
name = "generic-exports"
version = "0.1.0"
description = ""
authors = ["Antoine Montes <antoine.montes@pickyourskills.com>"]

[tool.poetry.dependencies]
python = "3.9"
SQLAlchemy = "^1.4.32"
pandas = "^1.4.1"
openpyxl = "^3.0.9"
XlsxWriter = "^3.0.3"
numba = "^0.55.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
